cabal-version:      2.4
name:               dabulang
version:            0.1.0.0
synopsis:           A simple imperative programming language interpreter
homepage:           https://github.com/stickyPiston/dabulang
bug-reports:        https://github.com/stickyPiston/dabulang/issues
author:             Job Vonk
maintainer:         sticcpistt@icloud.com

extra-source-files: TODO.org
                  , test
                  , README.md
                  , .hlint.yaml
                  , vscode-plugin
                  , .vscode

library dabulangc
    other-modules:    Eval
    exposed-modules:  Parser
                    , Types
                    , Ast
                    , Std
                    , Error

    build-depends:    base
                    , unordered-containers
                    , transformers
                    , mtl
                    , megaparsec
                    , parser-combinators
                    , text
                    , text-show
    hs-source-dirs:   src
    default-language: Haskell2010

executable dabulang
    main-is:          Main.hs
    build-depends:    dabulangc

executable lsp
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , lsp
                    , text
                    , dabulangc
                    , megaparsec
                    , transformers
                    , unordered-containers
                    , lens
    hs-source-dirs:   lsp
    default-language: Haskell2010