cabal-version:      2.4
name:               dabulang
version:            0.1.0.0
synopsis:           A simple imperative programming language interpreter
homepage:           https://github.com/stickyPiston/dabulang
bug-reports:        https://github.com/stickyPiston/dabulang/issues
author:             Job Vonk
maintainer:         sticcpistt@icloud.com

extra-source-files: TODO.org
                  , test
                  , README.md
                  , .hlint.yaml
                  , vscode-plugin
                  , .vscode

library dabulangc
    exposed-modules:  Parser
                    , Types
                    , Ast
                    , Std
                    , Error
                    , Eval

    build-depends:    base
                    , unordered-containers
                    , transformers
                    , mtl
                    , megaparsec
                    , text
                    , text-show
                    , transformers
                    , parser-combinators
    hs-source-dirs:   compiler
    default-language: Haskell2010

executable dabulang
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , dabulangc
                    , megaparsec
                    , mtl
                    , text
                    , unordered-containers
                    , transformers
    default-language: Haskell2010

executable lsp
    main-is:          Main.hs
    other-modules:    Completions

    build-depends:    base
                    , lsp
                    , text
                    , dabulangc
                    , megaparsec
                    , transformers
                    , unordered-containers
                    , lens
    hs-source-dirs:   lsp
    default-language: Haskell2010