cabal-version:      2.4
name:               dabulang
version:            0.1.0.0
synopsis:           A simple imperative programming language interpreter
homepage:           https://github.com/stickyPiston/dabulang
bug-reports:        https://github.com/stickyPiston/dabulang/issues
author:             Job Vonk
maintainer:         sticcpistt@icloud.com

library
    exposed-modules:  Parser
                    , Types
                    , Ast
                    , Std
                    , Error
                    , Eval

    build-depends:    base
                    , unordered-containers
                    , transformers
                    , mtl
                    , megaparsec
                    , text
                    , text-show
                    , transformers
                    , parser-combinators
    hs-source-dirs:   compiler
    default-language: Haskell2010

executable dabulang
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , dabulang
                    , megaparsec
                    , mtl
                    , text
                    , unordered-containers
                    , transformers
    default-language: Haskell2010